<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout

        android:id="@+id/shoeItem"
         android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/smallMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:layout_marginEnd="@dimen/smallMargin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/labelSize"
                android:layout_marginEnd="@dimen/smallMargin"
                />
            <TextView
                android:id="@+id/shoeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe1"
                android:textSize="@dimen/labelSize"
                android:textStyle="bold"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/labelSize"
                android:layout_marginEnd="@dimen/smallMargin"
                />
            <TextView
                android:id="@+id/shoeSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20"
                android:textSize="@dimen/labelSize"
                android:textStyle="bold"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/labelSize"
                android:layout_marginEnd="@dimen/smallMargin"
                />
            <TextView
                android:id="@+id/sheCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xmr"
                android:textSize="@dimen/labelSize"
                android:textStyle="bold"/>



        </LinearLayout>


        <LinearLayout
            android:layout_marginBottom="@dimen/mid_margin"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/labelSize"
                />
            <TextView
                android:id="@+id/shoeDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_shoe"
                android:textStyle="bold"

                />



        </LinearLayout>

    </LinearLayout>
</layout>




