<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginTop="@dimen/smallMargin"
            android:text="@string/login"
            android:textSize="@dimen/headerTextSize"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallMargin"
            android:text="@string/emailLabel"
            android:textSize="@dimen/labelSize"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextEmailAddress"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/passLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallMargin"
            android:text="@string/passLabel"
            android:textSize="@dimen/labelSize"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberPassword"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBetweenTextFields"
            android:ems="10"
            android:hint="@string/passHint"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toEndOf="@+id/passLabel"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginBetweenTextFields"
            android:ems="10"
            android:autofillHints="emailAddress"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.672"
            app:layout_constraintStart_toEndOf="@+id/emailLabel"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/new_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newLogin"
            app:layout_constraintBaseline_toBaselineOf="@+id/login_button"
            app:layout_constraintEnd_toStartOf="@+id/login_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/colorPrimary"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallMargin"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/new_login_button"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:backgroundTint="@color/colorPrimary"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>